--- a/src/RestfulWeb/RestfulWeb.csproj
+++ b/src/RestfulWeb/RestfulWeb.csproj
@@ -7,10 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RestfulWeb.Application\RestfulWeb.Application.csproj" />
     <ProjectReference Include="..\RestfulWeb.Domain\RestfulWeb.Domain.csproj" />
     <ProjectReference Include="..\RestfulWeb.infrastructure\RestfulWeb.infrastructure.csproj" />
   </ItemGroup>
